--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -11,13 +11,16 @@
 - include: install.yml
 
 # Typically configuration that should happen before service start
-- include: pre_configure.yml  
+- include: pre_configure.yml
 
-# Start/ restrat the service as needed  
+# Start/ restrat the service as needed
 - include: flush.yml
 
 # Special post_configuration. Only needed once per data backend
 - include: initialize.yml
+
+#Token variables include
+- include: variables.yml
 
 # Read in any secrets that are needed for configuration
 - include_vars: tokens.yml
@@ -26,7 +29,7 @@
 - include: flush.yml
 
 # Typically configuration that should happen before service start
-- include: post_configure.yml  
- 
+- include: post_configure.yml
+
 ## Cleanup
 #- include: cleanup.yml
